proper transit encoding of puks as bytes

--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,5 @@
-* reliable messaging (Network.UdpMessenger)
-* use proper puk encoding (transit bytes)
+* transit caching - https://github.com/cognitect/transit-format#caching
+* reliable messaging
 * store tuples (log all received tuples)
 * implement tuple space queries as materialized views
 * add contact from the command line (sneer add-contact <PUK>)
