handle invite links

--- a/todo.org
+++ b/todo.org
@@ -1,10 +1,13 @@
 * milestone - echo service
+
 A sneer party that can be added as a contact and will simply echo any
 message sent to it back.
 
 ** reply to invites
 
 http://sneer.me/public-key?9A281267BDB5779EFF2691E04BDCDD0CAF167936BCD6C72CBA9D50C977AAD09A&invite=f1f9dbc6a7e248f9b905eb5216ed21f0
+
+** send subs to contacts
 
 ** reliable messaging - retry sending tuples
 
